--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       .then(data => {
         questions = data;
         showQuestion();
+      }).catch(err => {
+        document.getElementById("quiz").innerHTML = "❌ Ma'lumot yuklab bo'lmadi. Iltimos, Web App URL yoki Google Sheets sozlamasini tekshiring.";
+        console.error("Fetch error:", err);
       });
 
     function showQuestion() {
@@ -47,7 +50,7 @@
 
     function showResult() {
       document.getElementById("quiz").innerHTML = "";
-      document.getElementById("result").innerHTML = 
+      document.getElementById("result").innerHTML =
         `✅ Natija: ${correct} ta to‘g‘ri / ${questions.length} ta<br>` +
         `Foiz: ${(correct / questions.length * 100).toFixed(1)}%`;
     }
