--- a/index.html
+++ b/index.html
@@ -29,17 +29,15 @@
           "❌ Ma'lumot yuklab bo'lmadi. Iltimos, Web App URL yoki Google Sheets sozlamasini tekshiring.";
         console.error("Fetch error:", err);
       });
-
-    function showQuestion() {
-      const q = questions[current];
-      document.getElementById("quiz").innerHTML =
-        `<div class="question">${current + 1}. ${q.question}</div>` +
-        q.options.map(opt =>
-          `<div class="option"><label><input type="radio" name="q" value="${opt}"> ${opt}</label></div>`
-        ).join('') +
-        `<button onclick="next()">Keyingisi</button>`;
-    }
-
+function showQuestion() {
+  const q = questions[current];
+  document.getElementById("quiz").innerHTML =
+    `<div class="question">${current + 1}. ${q.question}</div>` +
+    q.options.map((opt, index) =>
+      `<div class="option"><label><input type="radio" name="q" value="${opt}"> ${String.fromCharCode(65 + index)}. ${opt}</label></div>`
+    ).join('') +
+    `<button onclick="next()">Keyingisi</button>`;
+}
     function next() {
       const selected = document.querySelector('input[name="q"]:checked');
       if (!selected) return alert("Javob tanlang!");
