--- a/index.html
+++ b/index.html
@@ -24,20 +24,22 @@
       .then(data => {
         questions = data;
         showQuestion();
-      }).catch(err => {
-        document.getElementById("quiz").innerHTML = 
-          "❌ Ma'lumot yuklab bo'lmadi. Iltimos, Web App URL yoki Google Sheets sozlamasini tekshiring.";
+      })
+      .catch(err => {
+        document.getElementById("quiz").innerHTML = "❌ Ma'lumot yuklab bo‘lmadi. Iltimos, Web App URL yoki Google Sheets sozlamasini tekshiring.";
         console.error("Fetch error:", err);
       });
-function showQuestion() {
-  const q = questions[current];
-  document.getElementById("quiz").innerHTML =
-    `<div class="question">${current + 1}. ${q.question}</div>` +
-    q.options.map((opt, index) =>
-      `<div class="option"><label><input type="radio" name="q" value="${opt}"> ${String.fromCharCode(65 + index)}. ${opt}</label></div>`
-    ).join('') +
-    `<button onclick="next()">Keyingisi</button>`;
-}
+
+    function showQuestion() {
+      const q = questions[current];
+      document.getElementById("quiz").innerHTML =
+        `<div class="question">${current + 1}. ${q.question}</div>` +
+        q.options.map((opt, index) =>
+          `<div class="option"><label><input type="radio" name="q" value="${opt}"> ${String.fromCharCode(65 + index)}. ${opt}</label></div>`
+        ).join('') +
+        `<button onclick="next()">Keyingisi</button>`;
+    }
+
     function next() {
       const selected = document.querySelector('input[name="q"]:checked');
       if (!selected) return alert("Javob tanlang!");
@@ -49,7 +51,7 @@ function showQuestion() {
 
     function showResult() {
       document.getElementById("quiz").innerHTML = "";
-      document.getElementById("result").innerHTML = 
+      document.getElementById("result").innerHTML =
         `✅ Natija: ${correct} ta to‘g‘ri / ${questions.length} ta<br>` +
         `Foiz: ${(correct / questions.length * 100).toFixed(1)}%`;
     }
