--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -19,15 +20,14 @@
   <script>
     let questions = [], current = 0, correct = 0;
 
-    fetch("https://script.google.com/macros/s/AKfycbzDaysYKENS4AZYny2YRY0rTuOMmCybHXeAHozEl7RWZ0Z2FAAIuBX5jU7sCJ65GGRp/exec")
+    fetch("https://script.google.com/macros/s/AKfycbzDaysYKENS4AZYny2YRY0rTuOMmCybHXeAHozEI7RWZ0Z2FAAIuBX5jU7sCJ65GGRp/exec")
       .then(res => res.json())
       .then(data => {
         questions = data;
         showQuestion();
       })
       .catch(err => {
-        document.getElementById("quiz").innerHTML =
-          "❌ Ma'lumot yuklab bo‘lmadi. Iltimos, Web App URL yoki Google Sheets sozlamasini tekshiring.";
+        document.getElementById("quiz").innerHTML = "❌ Ma'lumot yuklab bo'lmadi. Iltimos, Web App URL yoki Google Sheets sozlamasini tekshiring.";
         console.error("Fetch error:", err);
       });
 
@@ -36,15 +36,15 @@
       document.getElementById("quiz").innerHTML =
         `<div class="question">${current + 1}. ${q.question}</div>` +
         q.options.map((opt, index) =>
-          `<div class="option"><label><input type="radio" name="q" value="${opt}"> ${String.fromCharCode(65 + index)}. ${opt}</label></div>`
-        ).join("") +
+          `<div class="option"><label><input type="radio" name="q" value="${index}"> ${String.fromCharCode(65 + index)}. ${opt}</label></div>`
+        ).join('') +
         `<button onclick="next()">Keyingisi</button>`;
     }
 
     function next() {
       const selected = document.querySelector('input[name="q"]:checked');
       if (!selected) return alert("Javob tanlang!");
-      if (selected.value === questions[current].answer) correct++;
+      if (parseInt(selected.value) === questions[current].answer) correct++;
       current++;
       if (current < questions.length) showQuestion();
       else showResult();
